#211427 - ClassCastException: org.netbeans.modules.html.editor.lib.html4parser.XmlSTElements$OT cannot be cast to org.netbeans.modules.html.editor.lib.html4parser.AstNode

--- a/html.parser/src/org/netbeans/modules/html/parser/Bundle.properties
+++ b/html.parser/src/org/netbeans/modules/html/parser/Bundle.properties
@@ -41,11 +41,11 @@
 # made subject to such option by the copyright holder.
 
 # module descritpion
-OpenIDE-Module-Name=HTML5 Parser
+OpenIDE-Module-Name=HTML Parser
 OpenIDE-Module-Display-Category=Web
-OpenIDE-Module-Short-Description=HTML5 Parsing support
+OpenIDE-Module-Short-Description=HTML Parsing support
 OpenIDE-Module-Long-Description=\
-    HTML5 Parsing support
+    HTML Parsing support
 
 # library display name
 htmlparser=HTML5 Parser
