#171086 allow to configure the properties for configuration in the UI.

--- a/maven/src/org/netbeans/modules/maven/configurations/Bundle.properties
+++ b/maven/src/org/netbeans/modules/maven/configurations/Bundle.properties
@@ -25,3 +25,4 @@ NewConfigurationPanel.txtActivate.AccessibleContext.accessibleDescription=Activa
 
 ACSD_Add_Config=Add configuration
 ACSD_Edit_Config=Edit configuration
+NewConfigurationPanel.lblProperties.text=&Set Properties
