Issue #211199 - Add "import static org.testng.Assert.*" to generated testNG template

--- a/testng/src/org/netbeans/modules/testng/resources/EmptyTestNGTest.java.template
+++ b/testng/src/org/netbeans/modules/testng/resources/EmptyTestNGTest.java.template
@@ -21,7 +21,7 @@ import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.BeforeClass;
 </#if>
 import org.testng.annotations.Test;
-import org.testng.Assert;
+import static org.testng.Assert.*;
 
 /**
  *
