--- a/web.jsf/src/org/netbeans/modules/web/jsf/wizards/Bundle.properties
+++ b/web.jsf/src/org/netbeans/modules/web/jsf/wizards/Bundle.properties
@@ -167,6 +167,7 @@ scanning-in-progress=Scanning in progress...
 
 LBL_MissingJSF=<html>A JavaServer Faces library needs to be added to the project and it is not defined in the IDE. You can define it in the Libraries tab.</html>
 LBL_SelectLibraryLocation=Select JSF location.
+LBL_FileTypeInChooser=JSF library folder or JAR file
 MSG_PathIsNotFaceletsFolder=The specified path is not a folder with JavaServer Faces JARs.
 MSG_VersionHasToBeDefined=The version of the library has to be defined.
 MSG_VersionAlreadyExist=A JavaServer Faces Library with this name is already defined.
@@ -175,9 +176,9 @@ LBL_CREATE_NEW_LIBRARY=Create New Library
 LBL_VERSION=Library Name\:
 MSG_CreatingLibraries=<html>When you finish this wizard, JSF Library will be added to the IDE's Library Manager. <br>This library will contain the appropriate JARs from the JSF folder.</html>
 HINT_Version=Write the JSF version (e.g. "1.1")
-LBL_INSTALL_DIR=JSF Folder\:
+LBL_INSTALL_DIR=JSF Folder or JAR:
 LBL_Any_Library=Server Library:
-HINT_JSF_Directory=Choose JSF folder.
+HINT_JSF_Directory=Choose JSF folder or JSF JAR in cases of version 2.1.3+.
 HINT_JSF_BROWSE_BTN=Browse for JSF folder.
 
 LBL_TAB_Configuration=Configuration
