Bug 211683 - Can't launch Arguments sample in external terminal

--- a/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/Bundle.properties
+++ b/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/Bundle.properties
@@ -38,6 +38,7 @@
 #
 # Portions Copyrighted 2009 Sun Microsystems, Inc.
 
+TerminalLocalNativeProcess.terminalTitle.text=External Terminal
 TerminalLocalNativeProcess.ProcessStarted.text=Process is started in an external terminal ...
 TerminalLocalNativeProcess.dorunNotFound.text=Unable to start process in an external terminal - dorun.sh script was not found ...
 TerminalLocalNativeProcess.terminalFailed.text=Failed to start external terminal ...
