Fix for BZ#209515 - Make the default configuration of REST projects more robust.

--- a/websvc.rest/src/org/netbeans/modules/websvc/rest/wizard/Bundle.properties
+++ b/websvc.rest/src/org/netbeans/modules/websvc/rest/wizard/Bundle.properties
@@ -330,3 +330,18 @@ LBL_ControllerDir=&Controller Package:
 
 LBL_AnalyzeEntities=Collecting Entities
 LBL_EntityModification=Modifying Entity
+LBL_UseJersey=Use &Jersey specific features
+JerseyPanel.useJersey.actionCommand=jersey
+JerseyPanel.restAppClass.text=ApplicationConfig
+ACSN_UseJersey=Use Jersey specific features
+ACSD_UseJersey=Use Jersey specific features against REST JEE6 specification
+ACSN_AppConfigPackage=Package name
+ACSD_AppConfigPackage=Package name for javax.ws.rs.core.Application subclass
+ACSD_AppConfigClass=Class name for javax.ws.rs.core.Application subclass
+ACSN_AppConfigClass=Application config class name
+LBL_AppConfigPackage=REST Application Packa&ge:
+LBL_AppConfigClass=REST Applica&tion Class Name:
+
+MSG_InvalidApplicationClassName=Invalid application class name
+
+LBL_SearchAppConfig=Detecting rest application configuration
