Issue #210960 - [72cat] Copy of multiple source files to the same package does not work anymore

--- a/refactoring.java/src/org/netbeans/modules/refactoring/java/plugins/Bundle.properties
+++ b/refactoring.java/src/org/netbeans/modules/refactoring/java/plugins/Bundle.properties
@@ -206,6 +206,7 @@ ERR_AccessesPackagePrivateConstructor2=Class you want to move ("{0}") is using {
 ERR_PackageIsReadOnly=Package "{0}" is read only.
 ERR_ClassToMoveClashes=Class "{0}" already exists in the target package.
 ERR_ClassToCopyClashes=Class "{0}" already exists in the target package.
+ERR_ClassesToCopyClashes=One or more class names are already used in the target package, they will be renamed.
 ERR_ClassToMoveInDefaultPackage=After the move, it will not be possible to import classes in the original default package.
 ERR_MovingClassToDefaultPackage=If the class is moved to the default package, classes in other packages will not be able to import the moved class.
 ERR_MovingMemberToDefaultPackage=If the member is moved to a class in the default package, classes in other packages will not be able to reference the moved member.
