--- a/java.navigation/src/org/netbeans/modules/java/navigation/actions/Bundle.properties
+++ b/java.navigation/src/org/netbeans/modules/java/navigation/actions/Bundle.properties
@@ -47,7 +47,7 @@ LBL_SortByName=Sort by Name
 LBL_SortBySource=Sort by Source
 
 #OpenAction
-LBL_Goto=Go to source
+LBL_Goto=Go to Source
 MSG_NoSource=Source not available for {0}
 MSG_OpeningElement=Opening {0}...
 
