#208090: Call setValid(false) before querying for OpenCookie. Convert into classical context action. Add icons, so this action can be placed in toolbar.

--- a/core.ui/src/org/netbeans/core/ui/options/filetypes/Bundle.properties
+++ b/core.ui/src/org/netbeans/core/ui/options/filetypes/Bundle.properties
@@ -99,3 +99,5 @@ FileAssociationsPanel.autoScan.text=Enable auto-scanning of sources
 
 KW_FilesOptions=File Extensions,File Types,MIME Types,Ignored Files,Source Scanning
 
+ERR_CantConvert=Cannot convert {0} object to {1} type
+ERR_CantOpen=Cannot open {0}
