fixed #202139 - No code assistance for files from unopened projects

--- a/cnd.qnavigator/src/org/netbeans/modules/cnd/qnavigator/navigator/Bundle.properties
+++ b/cnd.qnavigator/src/org/netbeans/modules/cnd/qnavigator/navigator/Bundle.properties
@@ -47,6 +47,7 @@ OpenIDE-Module-Name=C/C++ Navigator
 LBL_members=C/C++ members
 
 LBL_GoToDeclaration=Go to Source
+LBL_OpenContainingProject=Open containing project
 
 LBL_inClass=in {0}
 LBL_forClassSpecialization={0} specialization
@@ -66,3 +67,4 @@ ExpandAll=Expand All
 FilterSubmenu=Kind Filters
 
 StandAloneFile=The file with restricted code assistance
+UnopenedProject=Double click to open the containig project ({0})
