#204069 - Add Library JavaDB or Derby not found

--- a/derby/src/org/netbeans/modules/derby/Bundle.properties
+++ b/derby/src/org/netbeans/modules/derby/Bundle.properties
@@ -99,3 +99,5 @@ LBL_Properties=Properties...
 
 DerbyDatabaseNode_ShortDescription=Database {0} found in Database Location {1}
 ConnectDatabaseAction_ConnectAction=Connect...
+
+JAVADB_DRIVER_LABEL=Java DB Driver
