#211774 - Value of http-equiv attribute marked as invalid

--- a/html.editor/src/org/netbeans/modules/html/editor/hints/Bundle.properties
+++ b/html.editor/src/org/netbeans/modules/html/editor/hints/Bundle.properties
@@ -46,6 +46,9 @@ csl-hints/text/html/hints/general=HTML Validator
 CTL_Hints_DisplayName=Hints
 CTL_Hints_ToolTip=Hints And Warnings for HTML Language
 
+NotValidButCommon=Common But Not Valid
+NotValidButCommon_Desc=Commonly used techniques which are not valid according to the specifications.
+
 Encoding=Encoding
 Encoding_Desc=Checks of the file encoding declaration.
 
