--- a/java.editor/src/org/netbeans/modules/editor/java/Bundle.properties
+++ b/java.editor/src/org/netbeans/modules/editor/java/Bundle.properties
@@ -164,5 +164,6 @@ BTN_Long_Cancel=Cancel
 
 JavaCodeTemplateFilter_action_name=Java Code Template Filter
 
-TP_OverriddenTooltipSugg={1}<br><br>{0,choice,0#Ctrl-Alt-Click Navigates to Overriding Classes|1#Ctrl-Alt-Click Navigates to Overriding Methods}
+TP_OverriddenTooltipSugg={1}<br><br>{0,choice,0#Ctrl-Alt-Click Navigates to Implementing Classes|1#Ctrl-Alt-Click Navigates to Subclasses|2#Ctrl-Alt-Click Navigates to Implementing Methods|3#Ctrl-Alt-Click Navigates to Overriding Methods}
+TP_Mac_OverriddenTooltipSugg={1}<br><br>{0,choice,0#Cmd-Alt-Click Navigates to Implementing Classes|1#Cmd-Alt-Click Navigates to Subclasses|2#Cmd-Alt-Click Navigates to Implementing Methods|3#Cmd-Alt-Click Navigates to Overriding Methods}
 TP_GoToOverriddenTooltipSugg={0,choice,0#Classes Overriding:|1#Methods Overriding:}<br>{1}
