hide trace action under flag

--- a/cnd.modelui/src/org/netbeans/modules/cnd/modelui/trace/Bundle.properties
+++ b/cnd.modelui/src/org/netbeans/modules/cnd/modelui/trace/Bundle.properties
@@ -54,3 +54,4 @@ TestReferencePanel.thresholdField.text=
 TestReferencePanel.jPanel1.border.title=Thresholds
 TestReferencePanel.btnCollect.text=Collect files which analyzed longer than
 TestReferencePanel.btnUseFiles.text=Analyze slow Files (don't forget to reparse before)
+CTL_SwitchIndexAction=Use Index
