--- a/css.editor/src/org/netbeans/modules/css/editor/module/main/properties/fonts.properties
+++ b/css.editor/src/org/netbeans/modules/css/editor/module/main/properties/fonts.properties
@@ -58,7 +58,7 @@ font=[ \
 #XXX family-name property acceptor doesn't properly match unquoted family names with whitespaces like 'Times New Roman'
 font-family=[ [ <family-name> | <generic-family> ] [, [ <family-name> | <generic-family> ]]* ]  | inherit
 
-@family-name=!string | [ !identifier [ , !identifier ]* ]
+@family-name=!string | [ !identifier ]+
 
 @generic-family=serif | sans-serif | cursive | fantasy | monospace
 
