fixed Bug #211798 "use build analyzer" should be per project option

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
@@ -96,6 +96,14 @@ InheritedValuesTxt=Inherited values:
 
 FilesTxt=Files
 
+#Code Assistance Configuration
+CodeAssistanceTxt=Code Assistance
+CodeAssistanceHint=Configuring code assistance
+BuildAnalyzerTxt=Use Build Analyzer
+BuildAnalyzerHint=Configure code assistance by build artifacts after each building. 
+ToolsTxt2=List of Analyzed Tools
+ToolsHint2=Column separated compiler names. Analyzer uses list to collect compiler invocations at project building time.
+
 # Basic Compiler Configuration
 FastBuildTxt=No Flags
 DebugTxt=Debug
