--- a/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/execution/Bundle.properties
+++ b/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/execution/Bundle.properties
@@ -51,7 +51,7 @@ The error can be caused by resetting or unsetting LD_LIBRARY_PATH environment va
 To resolve the issue, you can do any of the following (listed in order of diminishing priority):\n\n\
 1. Do not unset LD_LIBRARY_PATH in your build or modify it like LD_LIBRARY_PATH=user_path1:user_path2:$LD_LIBRARY_PATH.\n\n\
 2. Unset LD_PRELOAD if LD_LIBRARY_PATH is unset in your build. Note that this disables Smart Build Analyzer.\n\n\
-3. Press the Configure Smart Build Analyzer button below and deselect the Use Smart Build Analyzer to Configure Code Assistance option in Project Options.
+3. Press the Configure Smart Build Analyzer button below and deselect the Use Build Analyzer in Code Assistance node in Project Properties.
 ResolveBuildLibrary.Forbid.text=Configure Smart Build Analyzer...
 ResolveBuildLibrary.Close.text=Close
 
