--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/execution/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/execution/Bundle.properties
@@ -40,7 +40,22 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 
-# ErrorAnnotation
-HINT_CompilerError=Compiler Error
-HINT_CompilerWarning=Compiler Warning
-HINT_IncludedFrom=In file included from
+ResolveBuildLibrary.Title.text=Resolve Build Issue
+ResolveBuildLibrary.Explanation.text=IDE uses Smart Build analyzer to Configure Code Assistance.\n\
+The error can be caused by resetting or unsetting LD_LIBRARY_PATH environment variable in your build.\n\n\
+To resolve the issue, you can do any of the following (listed in order of diminishing priority):\n\n\
+1. Do not unset LD_LIBRARY_PATH in your build or modify it like LD_LIBRARY_PATH=user_path1:user_path2:$LD_LIBRARY_PATH.\n\n\
+2. Unset LD_PRELOAD if LD_LIBRARY_PATH is unset in your build. Note that this disables Smart Build Analyzer.\n\n\
+3. Press the Configure Smart Build Analyzer button below and deselect the Use Build Analyzer in Code Assistance node in Project Properties.
+ResolveBuildLibrary.Forbid.text=Configure Smart Build Analyzer...
+ResolveBuildLibrary.Close.text=Close
+
+ResolveRfsLibrary.Title.text=Resolve Build Issue
+ResolveRfsLibrary.Explanation.text=IDE uses Automatic copying on a remote host.\n\
+The error can be caused by resetting or unsetting LD_LIBRARY_PATH environment variable in your build.\n\n\
+To resolve the issue, you can choose either:\n\n\
+1. Do not unset LD_LIBRARY_PATH in your build or modify it like LD_LIBRARY_PATH=user_path1:user_path2:$LD_LIBRARY_PATH.\n\n\
+2. Press the Change Access button below and, in Miscellaneous section of Host Propertes, choose System level file sharing (NFS, Samba) from Access project files via list.
+ResolveRfsLibrary.Forbid.text=Change Access...
+ResolveRfsLibrary.Close.text=Close
+
