--- a/libs.jna/nbproject/project.properties
+++ b/libs.jna/nbproject/project.properties
@@ -40,11 +40,12 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 
+javac.source=1.6
 release.external/jna-3.4.0.jar=modules/ext/jna-3.4.0.jar
-release.external/jna-3.4.0.jar!/com/sun/jna/darwin/libjnidispatch.jnilib=modules/lib/libjnidispatch.jnilib
-release.external/jna-3.4.0.jar!/com/sun/jna/linux-amd64/libjnidispatch.so=modules/lib/amd64/Linux/libjnidispatch.so
-release.external/jna-3.4.0.jar!/com/sun/jna/linux-i386/libjnidispatch.so=modules/lib/i386/Linux/libjnidispatch.so
-release.external/jna-3.4.0.jar!/com/sun/jna/win32-amd64/jnidispatch.dll=modules/lib/amd64/jnidispatch.dll
-release.external/jna-3.4.0.jar!/com/sun/jna/win32-x86/jnidispatch.dll=modules/lib/x86/jnidispatch.dll
-jnlp.indirect.files=modules/lib/**/*jnidispatch*
+release.external/jna-3.4.0.jar!/com/sun/jna/darwin/libjnidispatch.jnilib=modules/lib/libjninbdispatch.jnilib
+release.external/jna-3.4.0.jar!/com/sun/jna/linux-amd64/libjnidispatch.so=modules/lib/amd64/Linux/libjninbdispatch.so
+release.external/jna-3.4.0.jar!/com/sun/jna/linux-i386/libjnidispatch.so=modules/lib/i386/Linux/libjninbdispatch.so
+release.external/jna-3.4.0.jar!/com/sun/jna/win32-amd64/jnidispatch.dll=modules/lib/amd64/jninbdispatch.dll
+release.external/jna-3.4.0.jar!/com/sun/jna/win32-x86/jnidispatch.dll=modules/lib/x86/jninbdispatch.dll
+jnlp.indirect.files=modules/lib/**/*jninbdispatch*
 sigtest.gen.fail.on.error=false
