#211865 - link to online fx javadoc redirected

--- a/javafx2.editor/src/org/netbeans/modules/javafx2/editor/css/javafx2.properties
+++ b/javafx2.editor/src/org/netbeans/modules/javafx2/editor/css/javafx2.properties
@@ -65,7 +65,7 @@
 # This file is not a subject of i18n #
 ######################################
 
-#Source of the data: http://docs.oracle.com/javafx/2.0/api/javafx/scene/doc-files/cssref.html
+#Source of the data: http://docs.oracle.com/javafx/2/api/javafx/scene/doc-files/cssref.html
 
 #Primitives
 @match-anything= [ !anything ]*
