--- a/web.project/src/org/netbeans/modules/web/project/ui/customizer/Bundle.properties
+++ b/web.project/src/org/netbeans/modules/web/project/ui/customizer/Bundle.properties
@@ -657,3 +657,4 @@ LBL_BuildTestClassesDir_DisplayName=Compiled Tests
 LBL_CustomizerFrameworks_Loading=Loading...
 LBL_CustomizeCompile_CompileOnSave_JCheckBox=&Compile on Save
 LBL_CustomizerCompile_DeployOnSave_Description=<html>If selected, files are compiled when you save them.<br>This option saves you time when you run or debug your application in the IDE.</html>
+LBL_CustomizeCompile_CopyOnSave_JCheckBox=Copy &Static Resources on Save
