added a method in InstallSupport for better control of installation of plugins

--- a/autoupdate.ui/src/org/netbeans/modules/autoupdate/ui/Bundle.properties
+++ b/autoupdate.ui/src/org/netbeans/modules/autoupdate/ui/Bundle.properties
@@ -185,3 +185,4 @@ UnitTab_Splitter_DefaultDividerLocation=390
 SettingsTab_Splitter_DefaultDividerLocation=390
 Unit_InternalUpdates_Version=(Internal Updates)
 Unit_InternalUpdates_Title=Internal Updates
+ProblemPanel.cbShowAgain.text=&Don't show this message again
