--- a/cloud.oracle/src/org/netbeans/modules/cloud/oracle/ui/Bundle.properties
+++ b/cloud.oracle/src/org/netbeans/modules/cloud/oracle/ui/Bundle.properties
@@ -102,3 +102,4 @@ OracleWizardComponent.jLabel6.text=Database Service Name:
 OracleWizardComponent.dbServiceNameTextField.text=
 CustomizerCloudGeneral.jLabel2.text=&Database Service Name:
 CustomizerCloudGeneral.dbServiceNameTextField.text=
+CustomizerCloudGeneral.wrongPwd=Cannot connect to Oracle Public Cloud using provided credentials.
