#211780 - User should be encouraged to register a local WebLogic 10.3.6 instance before registering Oracle cloud

--- a/cloud.oracle/src/org/netbeans/modules/cloud/oracle/ui/Bundle.properties
+++ b/cloud.oracle/src/org/netbeans/modules/cloud/oracle/ui/Bundle.properties
@@ -103,3 +103,4 @@ OracleWizardComponent.dbServiceNameTextField.text=
 CustomizerCloudGeneral.jLabel2.text=&Database Service Name:
 CustomizerCloudGeneral.dbServiceNameTextField.text=
 CustomizerCloudGeneral.wrongPwd=Cannot connect to Oracle Public Cloud using provided credentials.
+OracleWizardPanel.noWeblogic=<html>It is recommended you register local Weblogic server instance first.
