--- a/javascript2.editor/nbproject/project.properties
+++ b/javascript2.editor/nbproject/project.properties
@@ -6,4 +6,5 @@ nbm.needs.restart=true
 
 release.external/jquery-api.xml=docs/jquery-api.xml
 
-
+# junit properties
+test-unit-sys-prop.test.jquery.api.file=${basedir}/external/jquery-api.xml
