--- a/libs.jna/nbproject/project.properties
+++ b/libs.jna/nbproject/project.properties
@@ -42,10 +42,11 @@
 
 javac.source=1.6
 release.external/jna-3.4.0.jar=modules/ext/jna-3.4.0.jar
-release.external/jna-3.4.0.jar!/com/sun/jna/darwin/libjnidispatch.jnilib=modules/lib/libjninbdispatch.jnilib
-release.external/jna-3.4.0.jar!/com/sun/jna/linux-amd64/libjnidispatch.so=modules/lib/amd64/Linux/libjninbdispatch.so
-release.external/jna-3.4.0.jar!/com/sun/jna/linux-i386/libjnidispatch.so=modules/lib/i386/Linux/libjninbdispatch.so
-release.external/jna-3.4.0.jar!/com/sun/jna/win32-amd64/jnidispatch.dll=modules/lib/amd64/jninbdispatch.dll
-release.external/jna-3.4.0.jar!/com/sun/jna/win32-x86/jnidispatch.dll=modules/lib/x86/jninbdispatch.dll
-jnlp.indirect.files=modules/lib/**/*jninbdispatch*
+# Don't forget to rename native libs being extracted from the JAR when upgrading the JNA library.
+release.external/jna-3.4.0.jar!/com/sun/jna/darwin/libjnidispatch.jnilib=modules/lib/libjnidispatch-340.jnilib
+release.external/jna-3.4.0.jar!/com/sun/jna/linux-amd64/libjnidispatch.so=modules/lib/amd64/Linux/libjnidispatch-340.so
+release.external/jna-3.4.0.jar!/com/sun/jna/linux-i386/libjnidispatch.so=modules/lib/i386/Linux/libjnidispatch-340.so
+release.external/jna-3.4.0.jar!/com/sun/jna/win32-amd64/jnidispatch.dll=modules/lib/amd64/jnidispatch-340.dll
+release.external/jna-3.4.0.jar!/com/sun/jna/win32-x86/jnidispatch.dll=modules/lib/x86/jnidispatch-340.dll
+jnlp.indirect.files=modules/lib/**/*jnidispatch-340*
 sigtest.gen.fail.on.error=false
