#211908 - Show Git renames naturally in Diff view

--- a/git/src/org/netbeans/modules/git/ui/diff/Bundle.properties
+++ b/git/src/org/netbeans/modules/git/ui/diff/Bundle.properties
@@ -66,12 +66,17 @@ MSG_No_Changes_IndexWorking = <No Index/Working Tree Changes>
 #Setup
 MSG_DiffPanel_HeadRevision = HEAD
 MSG_DiffPanel_IndexRevision = Index
+MSG_DiffPanel_HeadRevision.file = HEAD ({0})
 MSG_DiffPanel_LocalModified = Modified In Working Tree
 MSG_DiffPanel_LocalDeleted = Deleted In Working Tree
 MSG_DiffPanel_LocalNew = New In Working Tree
+MSG_DiffPanel_LocalCopied = Copied in Working Tree
+MSG_DiffPanel_LocalRenamed = Renamed in Working Tree
 MSG_DiffPanel_IndexModified = Modified In Index
 MSG_DiffPanel_IndexDeleted = Deleted In Index
 MSG_DiffPanel_IndexNew = New In Index
+MSG_DiffPanel_IndexCopied = Copied in Index
+MSG_DiffPanel_IndexRenamed = Renamed in Index
 MultiDiffPanel.btnRevert.toolTipText=Revert Modifications
 
 #ExportUncommittedChangesAction
