#209803 - fx:controller now set to full name, plus added missing wizard panel titles

--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
@@ -104,6 +104,14 @@ AN_PanelSourceFolders=N/A
 AD_PanelSourceFolders=N/A
 TXT_RootOwnedByProject={0} (owned by {1})
 
+#NewFXMLFileWizard
+LAB_FXMLStep0=Choose File Type
+LAB_FXMLStep1=FXML Name and Location
+LAB_FXMLStep2=Controller Class
+LAB_FXMLStep3=Cascading Style Sheet
+TXT_FXMLNameAndLoc=FXML File Name and Location
+TXT_ControllerNameAndLoc=FXML Controller Class Name and Location
+TXT_CSSNameAndLoc=Cascading Style Sheet Name and Location
 
 ACSN_createMainCheckBox=Create Application Class
 
