--- a/gsf.testrunner/src/org/netbeans/modules/gsf/testrunner/api/Bundle.properties
+++ b/gsf.testrunner/src/org/netbeans/modules/gsf/testrunner/api/Bundle.properties
@@ -28,6 +28,7 @@ MSG_TestsuitePending={0} - Pending
 MSG_TestsuiteSkipped={0} - Skipped
 MSG_TestsuiteRunning_HTML=running...
 MSG_TestsuitePassed_HTML=passed
+MSG_TestsuitePassedWithErrors_HTML=passed with errors
 MSG_TestsuiteFailed_HTML=Failed
 MSG_TestsuitePending_HTML=Pending
 MSG_TestsuiteAborted_HTML=Aborted
@@ -38,6 +39,7 @@ MSG_TestMethodFailed={0} - Failed
 MSG_TestMethodPending={0} - Pending
 MSG_TestMethodError={0} - caused an ERROR
 MSG_TestMethodPassed_HTML=passed
+MSG_TestMethodPassedWithErrors_HTML=passed with errors
 MSG_TestMethodFailed_HTML=Failed
 MSG_TestMethodPending_HTML=Pending
 MSG_TestMethodSkipped_HTML=Skipped
@@ -49,12 +51,14 @@ MSG_TestMethodFailed_time={0} - FAILED  ({1,number,0.0##} s)
 MSG_TestMethodPending_time={0} - PENDING ({1,number,0.0##} s)
 MSG_TestMethodError_time={0} - caused an ERROR  ({1,number,0.0##} s)
 MSG_TestMethodPassed_HTML_time=passed  ({0,number,0.0##} s)
+MSG_TestMethodPassedWithErrors_HTML_time=passed with errors  ({0,number,0.0##} s)
 MSG_TestMethodFailed_HTML_time=FAILED  ({0,number,0.0##} s)
 MSG_TestMethodPending_HTML_time=PENDING  ({0,number,0.0##} s)
 MSG_TestMethodSkipped_HTML_time=SKIPPED ({0,number,0.0##} s)
 MSG_TestMethodError_HTML_time=caused an ERROR  ({0,number,0.0##} s)
 
 MSG_TestMethodPassed_HTML_cause=passed
+MSG_TestMethodPassedWithErrors_HTML_cause=passed with errors
 MSG_TestMethodFailed_HTML_cause=Failed: {0}
 MSG_TestMethodPending_HTML_cause=Pending: {0}
 MSG_TestMethodSkipped_HTML_cause=Skipped: {0}
