Expanded comment from 554a3e495db5.

--- a/libs.jna/nbproject/project.properties
+++ b/libs.jna/nbproject/project.properties
@@ -42,7 +42,7 @@
 
 javac.source=1.6
 release.external/jna-3.4.0.jar=modules/ext/jna-3.4.0.jar
-# Don't forget to rename native libs being extracted from the JAR when upgrading the JNA library.
+# Do not forget to rename native libs being extracted from the JAR when upgrading the JNA library, and patch org.netbeans.libs.jna.Installer as well.
 release.external/jna-3.4.0.jar!/com/sun/jna/darwin/libjnidispatch.jnilib=modules/lib/libjnidispatch-340.jnilib
 release.external/jna-3.4.0.jar!/com/sun/jna/linux-amd64/libjnidispatch.so=modules/lib/amd64/Linux/libjnidispatch-340.so
 release.external/jna-3.4.0.jar!/com/sun/jna/linux-i386/libjnidispatch.so=modules/lib/i386/Linux/libjnidispatch-340.so
