C++ search - use new API

--- a/cnd.search/src/org/netbeans/modules/cnd/search/ui/Bundle.properties
+++ b/cnd.search/src/org/netbeans/modules/cnd/search/ui/Bundle.properties
@@ -8,6 +8,6 @@ DirectoryChooser.fileFilter.description=Directories
 
 EntryNode.line.text=[Line: {0}]
 CNDSearchPanel.cbCaseSensitive.text=&Match case
-CNDSearchPanel.cdWholeWords.text=&Whole Words
 CNDSearchPanel.ValidationStatus.no_params=Please specify search parameters...
 CNDSearchPanel.ValidationStatus.wrong_regexpr=Wrong regular expression...
+CNDSearchPanel.cbWholeWords.text=&Whole Words
