--- a/libs.jna/nbproject/project.properties
+++ b/libs.jna/nbproject/project.properties
@@ -48,5 +48,10 @@ release.external/jna-3.4.0.jar!/com/sun/jna/linux-amd64/libjnidispatch.so=module
 release.external/jna-3.4.0.jar!/com/sun/jna/linux-i386/libjnidispatch.so=modules/lib/i386/linux/libjnidispatch-340.so
 release.external/jna-3.4.0.jar!/com/sun/jna/win32-amd64/jnidispatch.dll=modules/lib/amd64/jnidispatch-340.dll
 release.external/jna-3.4.0.jar!/com/sun/jna/win32-x86/jnidispatch.dll=modules/lib/x86/jnidispatch-340.dll
-jnlp.indirect.files=modules/lib/**/*jnidispatch-340*
+jnlp.verify.excludes=\
+    modules/lib/amd64/jnidispatch-340.dll,\
+    modules/lib/amd64/linux/libjnidispatch-340.so,\
+    modules/lib/i386/linux/libjnidispatch-340.so,\
+    modules/lib/x86/jnidispatch-340.dll,\
+    modules/lib/libjnidispatch-340.jnilib
 sigtest.gen.fail.on.error=false
