#211107: Profiling mode can be now stopped before attaching profiler

--- a/glassfish.common/src/org/netbeans/modules/glassfish/common/Bundle.properties
+++ b/glassfish.common/src/org/netbeans/modules/glassfish/common/Bundle.properties
@@ -70,6 +70,7 @@ MSG_STOP_SERVER_FAILED_FNF={0} Server cannot stop.
 MSG_STOP_SERVER_FAILED_PD={0} Server stop failed. Can't create stop proccess.
 MSG_STOP_SERVER_IN_PROGRESS=Server {0} is stopping
 MSG_SERVER_STOPPED={0} was stopped.
+MSG_SERVER_PROFILING_STOPPED={0} Profiling stopped.
 MSG_STOP_SERVER_FAILED={0} Stop Failed
 MSG_STOP_TARGET_FAILED={0} stop failed. Cannot stop {1}.
 
