Actions implemented: Edit repository, Edit Query, Delete Query

--- a/tasks.ui/src/org/netbeans/modules/tasks/ui/actions/Bundle.properties
+++ b/tasks.ui/src/org/netbeans/modules/tasks/ui/actions/Bundle.properties
@@ -14,5 +14,6 @@ CTL_Refresh=Refresh
 CTL_CreateTask=Create Task
 CTL_Search=Search
 CTL_Remove=Remove
+CTL_Edit=Edit
 
 LBL_DummyAction=Sorry, not implemented yet.
