Updated javafx2.platform spec version number + long description

--- a/javafx2.platform/src/org/netbeans/modules/javafx2/platform/Bundle.properties
+++ b/javafx2.platform/src/org/netbeans/modules/javafx2/platform/Bundle.properties
@@ -1,4 +1,6 @@
 OpenIDE-Module-Display-Category=JavaFX 2
+OpenIDE-Module-Long-Description=\
+    For the list of included fixed bugs please check http://wiki.netbeans.org/NetBeans7.1PatchesInfo.
 OpenIDE-Module-Name=JavaFX 2 Platform
 
 JavaFXPlatformCustomizer.enableCheckBox.text=Enable JavaFX
