Popup menu texts changed

--- a/tasks.ui/src/org/netbeans/modules/tasks/ui/actions/Bundle.properties
+++ b/tasks.ui/src/org/netbeans/modules/tasks/ui/actions/Bundle.properties
@@ -2,8 +2,7 @@ CTL_CloseNode=Close
 CTL_OpenNode=Open
 CTL_ActivateTask=Activate
 CTL_DeactivateTask=Deactivate
-CTL_OpenTask=Open
-CTL_OpenQuery=Open Query
+CTL_Open=Open
 CTL_ShowResult=Search Result View
 CTL_Delete=Delete
 CTL_Rename=Rename
@@ -12,8 +11,10 @@ CTL_MoveTask=Move to Category
 CTL_AddToCat=Add to Category
 CTL_Refresh=Refresh
 CTL_CreateTask=Create Task
-CTL_Search=Search
+CTL_Search=?Search?
 CTL_Remove=Remove
 CTL_Edit=Edit
+CTL_Properties=Properties
+CTL_Notification=Set Notification
 
 LBL_DummyAction=Sorry, not implemented yet.
