Bug 211981 "*T13y* other localization issues" fix.

--- a/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/remote/Bundle.properties
+++ b/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/remote/Bundle.properties
@@ -63,7 +63,7 @@ LABEL_login_name=Login Name
 LABEL_ssh_port=SSH Port #
 LABEL_remember_password=Remember Password
 
-HINT_host_name=Remote host name where dbx and debugee run
+HINT_host_name=Remote host name where dbx and debuggee run
 HINT_platform=Platform Of Remote Host
 HINT_studio_location=e.g. </opt/sunstudioNN.N>
 HINT_login_name=Login Name Of User
