--- a/cnd.editor/src/org/netbeans/modules/cnd/editor/fortran/Bundle.properties
+++ b/cnd.editor/src/org/netbeans/modules/cnd/editor/fortran/Bundle.properties
@@ -305,6 +305,7 @@ EXAMPLE_coloring_fortran-errors=error
 EXAMPLE_coloring_fortran-identifier=identifier
 EXAMPLE_coloring_fortran-keywords=keyword
 EXAMPLE_coloring_fortran-keyword-operators=.and.
+# Should not be translated
 EXAMPLE_coloring_fortran-line-comment=C
 EXAMPLE_coloring_fortran-numeric-literals=7
 EXAMPLE_coloring_fortran-operators=*+-/ == <> <= >= /=
