--- a/cnd/src/org/netbeans/modules/cnd/builds/Bundle.properties
+++ b/cnd/src/org/netbeans/modules/cnd/builds/Bundle.properties
@@ -41,7 +41,7 @@
 # made subject to such option by the copyright holder.
 
 # Tab titles for make execution
-#    {0} - List of targets
+# {0} - List of make targets we are executing, example "make clean"
 TITLE_MakeTarget=make {0}
 TITLE_MakeDefaultTarget=make
 TITLE_output_reused=Make Execution
