--- a/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/breakpoints/types/Bundle.properties
+++ b/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/breakpoints/types/Bundle.properties
@@ -113,6 +113,7 @@ LBL_Instruction=Instruction
 PROP_breakpoint_instruction=Address
 HINT_breakpoint_instruction=Address
 AddressLabel=Address:
+#First letter of above string (Address)
 MNEM_AddressLabel=A
 ACSD_Address=Type in the address of instruction
 
@@ -121,6 +122,7 @@ LBL_Variable=Variable
 PROP_breakpoint_variable_name=Variable expression
 HINT_breakpoint_variable_name=Variable expression
 Variable=Variable:
+#First letter of above string (Variable)
 MNEM_Variable=V
 ACSD_Variable=Type in a variable name
 
@@ -129,6 +131,7 @@ PROP_breakpoint_exception_name=Exception name
 HINT_breakpoint_exception_name=Exception name
 LBL_Exception=Exception
 Type=Type:
+#Last letter of above string (Type)
 MNEM_Type=e
 ACSD_Type=Type in or select a type of exception
 
@@ -141,7 +144,10 @@ ENUM_exit=On Exit
 ENUM_entry=On Entry
 LBL_System_Call=System Call
 SystemCall=System Call:
+#First letter of above string (System Call)
 MNEM_SystemCall=S
+#First letter of Entrance word 
 MNEM_OnEntrance=E
+#Second letter of Exit word
 MNEM_OnExit=x
 ACSD_SystemCall=Type in or select system call
