--- a/cnd.modelui/src/org/netbeans/modules/cnd/modelui/trace/Bundle.properties
+++ b/cnd.modelui/src/org/netbeans/modules/cnd/modelui/trace/Bundle.properties
@@ -40,11 +40,12 @@ CTL_TestProjectDirectUsageReferencesAction=Test Direct Usage of References
 CTL_TestProjectIndexUsageReferencesAction=Test Usage of Indexed References
 # Should be translated
 CTL_TestProjectSmartCCReferencesAction=Analyze Smart CC For All References 
-# Should be translated
+# Should be translated, CC - Code Complition
 CTL_TestProjectSmartCCDirectUsageReferencesAction=Analyze Smart CC For Direct Usage of References
 CTL_TestProjectReparse=Reparse Project and Show Parse Errors 
 CTL_TestErrorHighlighting=Test Error Highlighting
 CTL_TestRepositoryDistribution=Test Repository Distribution
+# APT - Abstract Preprocessor Tree
 CTL_TraceAPTDiagnosticAction=Dump APT Diagnostics
 CTL_TestFileContainerAction=Test File Container
 TestReferencePanel.jLabel1.text=Threads #:
