Bug 211980 "*T13y* DNT issues in different areas" fix.

--- a/cnd.cncppunit/src/org/netbeans/modules/cnd/cncppunit/editor/filecreation/Bundle.properties
+++ b/cnd.cncppunit/src/org/netbeans/modules/cnd/cncppunit/editor/filecreation/Bundle.properties
@@ -133,6 +133,9 @@ LBL_TargetChooser_ModifiedFiles_Label=Modified Files:
 # I'm generating test file name from name of test
 # {0} - name of the existing file
 TestSuggestedName=Test for {0}
+#Should not be translated
 TestClassSuggestedName=test_for_{0}_class
+#Should not be translated
 TestRunnerSuggestedName=test_for_{0}_runner
+#Should not be translated
 TestFileSuggestedName=test_for_{0}
