--- a/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/io/Bundle.properties
+++ b/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/io/Bundle.properties
@@ -62,8 +62,7 @@ Title_Debugger_External_Terminal=Debugger External Terminal
 
 MSG_Console_Type_Unsupported=Selected console type is not supported in your configuration, using External terminal instead
 
-# Gdb Helper used by ExternalTerminal. The only part which should be translated is
-# the prompt at the end of the script.
+# Gdb Helper used by ExternalTerminal. Should not be translated.
 GdbHelperScript=#! /bin/sh\n\
 \n\
 if [ -x /bin/uname ]\n\
