--- a/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/utils/Bundle.properties
+++ b/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/utils/Bundle.properties
@@ -109,15 +109,25 @@ MSG_NoEngineFound=Could not find debugger engine; it should be installed as\n{0}
 MSG_NullComponentPointer=Component is Null, cannot set focus.
 
 # PsProvider
+# Should not be translated
 PS_HDR_UID=UID
+# Should not be translated
 PS_HDR_PID=PID
+# Should not be translated
 PS_HDR_PPID=PPID
+# Should not be translated
 PS_HDR_STIME=STIME
+# Should not be translated
 PS_HDR_TIME=TIME
+# Should not be translated
 PS_HDR_CMD=CMD
+# Should not be translated
 PS_HDR_COMMAND=COMMAND
+# Should not be translated
 PS_HDR_PGID=PGID
+# Should not be translated
 PS_HDR_WINPID=WINPID
+# Should not be translated
 PS_HDR_TTY=TTY
 
 # Remote Connect
