--- a/cnd.editor/src/org/netbeans/modules/cnd/editor/fortran/Bundle.properties
+++ b/cnd.editor/src/org/netbeans/modules/cnd/editor/fortran/Bundle.properties
@@ -95,6 +95,7 @@ LAB_NOCAT_stringLiteral  =string-literal
 
 #  TC_OPERATORS
 
+# All these shoud not be translated
 # Shoudn't be translated
 LAB_OP_power             =power
 # Shoudn't be translated
@@ -121,7 +122,7 @@ LAB_OP_greaterThanEquals =greater-than-equals
 ###################################################
 
 #  Special Characters
-
+# All these shoud not be translated
 LAB_SC_equals           =equals
 LAB_SC_dot              =dot
 LAB_SC_comma            =comma
@@ -140,7 +141,7 @@ LAB_SC_currency         =currency
 ###################################################
 
 # Keywords
-
+# They all should not be translated
 LAB_KW_accessEqual       =access=
 LAB_KW_actionEqual       =action=
 LAB_KW_advanceEqual      =advance=
@@ -279,7 +280,7 @@ LAB_KW_writeEqual        =write=
 ###################################################
 
 # Errors
-
+# All these shoud not be translated
 LAB_ERR_invalidHexLiteral         =invalid-hex-literal
 LAB_ERR_invalidOctalLiteral       =invalid-octal-literal
 LAB_ERR_invalidBinaryLiteral      =invalid-binary-literal
