--- a/cnd.editor/src/org/netbeans/modules/cnd/editor/fortran/options/Bundle.properties
+++ b/cnd.editor/src/org/netbeans/modules/cnd/editor/fortran/options/Bundle.properties
@@ -43,6 +43,7 @@
 LBL_Free_Format=&Free Format
 LBL_AUTO_DETECT=&Auto Detect Format
 
+# Should not be translated
 SAMPLE_Default=\
 \t#define N 10\n\
 \tSUBROUTINE test\n\
