--- a/cnd.makeproject.source.bridge/src/org/netbeans/modules/cnd/makeproject/source/bridge/resources/Bundle.properties
+++ b/cnd.makeproject.source.bridge/src/org/netbeans/modules/cnd/makeproject/source/bridge/resources/Bundle.properties
@@ -1,4 +1,5 @@
 OpenIDE-Module-Display-Category=C/C++
+# Should not be translated
 OpenIDE-Module-Long-Description=\
     bridge module which can provide extra properties for C/C++ editor based on MakeProject options
 OpenIDE-Module-Name=C/C++ Make Project Editor Bridge
