--- a/cnd.simpleunit/src/org/netbeans/modules/cnd/simpleunit/editor/filecreation/Bundle.properties
+++ b/cnd.simpleunit/src/org/netbeans/modules/cnd/simpleunit/editor/filecreation/Bundle.properties
@@ -129,4 +129,5 @@ TestSimpleIteratorFactoryName="Simple Test"
 # I'm generating test file name from name of test
 # {0} - name of the existing file
 TestSuggestedName=Test for {0}
+#Should not be translated
 TestFileSuggestedName=test_for_{0}
