--- a/cnd.testrunner/src/org/netbeans/modules/cnd/testrunner/ui/Bundle.properties
+++ b/cnd.testrunner/src/org/netbeans/modules/cnd/testrunner/ui/Bundle.properties
@@ -73,27 +73,27 @@ MSG_TestResultSummary3 = {0}, {1}, {2}, {3}.
 MSG_TestsuiteNoname=Test suite
 MSG_TestsuiteRunning={0} - running...
 MSG_TestsuiteRunningNoname=Test suite running...
-# This line should be translated, meaning is "Some_test_suite - FAILED"
+# FAILED word should be translated, English message example: "Some_test_suite - FAILED"
 MSG_TestsuiteFailed={0} - FAILED
-# This line should be translated, meaning is "Some_test_suite - PENDING"
+# PENDING word should be translated, English message example: "Some_test_suite - PENDING"
 MSG_TestsuitePending={0} - PENDING
 MSG_TestsuiteRunning_HTML=running...
 MSG_TestsuitePassed_HTML=passed
-# This line should be translated
+# FAILED word should be translated
 MSG_TestsuiteFailed_HTML=FAILED
-# This line should be translated
+# PENDING word should be translated
 MSG_TestsuitePending_HTML=PENDING
 
 # {0} .. name of the test method
-# This line should be translated, meaning is "Some_test_method - FAILED"
+# FAILED word should be translated, English message example: "Some_test_method_name - FAILED"
 MSG_TestMethodFailed={0} - FAILED
-# This line should be translated, meaning is "Some_test_method - PENDING"
+# PENDING word should be translated, English message example: "Some_test_method_name - PENDING"
 MSG_TestMethodPending={0} - PENDING
 MSG_TestMethodError={0} - caused an ERROR
 MSG_TestMethodPassed_HTML=passed
-# This line should be translated
+# FAILED word should be translated, the meaning is that some test of method failed
 MSG_TestMethodFailed_HTML=FAILED
-# This line should be translated
+# PENDING word should be translated, the meaning is that some test of method pending
 MSG_TestMethodPending_HTML=PENDING
 MSG_TestMethodError_HTML=caused an ERROR
 
@@ -108,9 +108,9 @@ MSG_TestMethodPending_HTML_time=PENDING  ({0,number,0.0##} s)
 MSG_TestMethodError_HTML_time=caused an ERROR  ({0,number,0.0##} s)
 
 MSG_TestMethodPassed_HTML_cause=passed
-# This line should be translated, meaning is "FAILED (Some_test_method)"
+# FAILED word should be translated, English message example: "FAILED (Some_test_method)"
 MSG_TestMethodFailed_HTML_cause=FAILED  ({0})
-# This line should be translated, meaning is "PENDING (Some_test_method)"
+# PENDING word should be translated, English message example: "PENDING (Some_test_method)"
 MSG_TestMethodPending_HTML_cause=PENDING  ({0})
 MSG_TestMethodError_HTML_cause=caused an ERROR  ({0})
 
