--- a/cnd.refactoring/src/org/netbeans/modules/cnd/refactoring/ui/Bundle.properties
+++ b/cnd.refactoring/src/org/netbeans/modules/cnd/refactoring/ui/Bundle.properties
@@ -86,7 +86,7 @@ ERR_ReadOnlyFileSystem=Cannot proceed. Package "{0}" is located only in read-onl
 ERR_UnknownPackage=A package corresponding to the entered name cannot be found.
 LBL_DefaultPackage=&lt;default&gt;
 # Should be translated
-LBL_NeedsRefresh=NEEDS REFRESH
+LBL_NeedsRefresh=Needs Refresh
 LBL_OpenInNavigator=Open In Navigator
 LBL_NewName=&New Name: 
 LBL_Occurence=occurrence
