--- a/cnd/src/org/netbeans/modules/cnd/actions/Bundle.properties
+++ b/cnd/src/org/netbeans/modules/cnd/actions/Bundle.properties
@@ -112,7 +112,7 @@ Status.CMakeTerminated=CMake terminated.
 
 Output.RunSuccessful=RUN SUCCESSFUL (total time:{0})
 Output.RunFailed=RUN FAILED (exit value {0}, total time:{1})
-# Both words should be translated; The meaning is: Execution (run) of binary failed 
+# Both words should be translated as is; The meaning is: Execution (run) of binary failed 
 Output.RunFailedToStart=RUN FAILED
 Output.RunTerminated=RUN TERMINATED (total time:{0})
 Status.RunSuccessful=Run successful.
