--- a/cnd.search/src/org/netbeans/modules/cnd/search/ui/Bundle.properties
+++ b/cnd.search/src/org/netbeans/modules/cnd/search/ui/Bundle.properties
@@ -11,3 +11,7 @@ CNDSearchPanel.cbCaseSensitive.text=&Match case
 CNDSearchPanel.ValidationStatus.no_params=Please specify search parameters...
 CNDSearchPanel.ValidationStatus.wrong_regexpr=Wrong regular expression...
 CNDSearchPanel.cbWholeWords.text=&Whole Words
+SearchResultPropertySet.column.path.name=path
+SearchResultPropertySet.column.path.desc=Full Path
+SearchResultPropertySet.column.size.name=size
+SearchResultPropertySet.column.size.desc=File Size
