#209805 - New Empty FXML does not handle existing CSS stylesheet properly

--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
@@ -317,6 +317,7 @@ MSG_ConfigureFXMLPanel_SGs_Error=Source Groups can not be null!
 MSG_ConfigureFXMLPanel_Project_Error=Project must be specified!
 MSG_ConfigureFXMLPanel_Project_Null_Error=Project can not be null!
 MSG_ConfigureFXMLPanel_Template_Error=Template must be specified!
+MSG_ConfigureFXMLPanel_Target_Error=Target folder must be specified!
 ConfigureFXMLPanelVisual.locationLabel.text=&Location:
 ConfigureFXMLPanelVisual.packageLabel.text=Pac&kage:
 ConfigureFXMLPanelVisual.projectLabel.text=&Project:
