Issue #211907 - File encoding Bug!: fixed XML uses standard encoding query on file load. On save, it defaults to the standard query if the document does not specify any encoding. Fixed exceptional case when selected encoding is not suitable for the content - a confirmation dialog appears to save XML in utf-8 (xml declaration is added or changed).

--- a/xml/src/org/netbeans/modules/xml/text/Bundle.properties
+++ b/xml/src/org/netbeans/modules/xml/text/Bundle.properties
@@ -45,7 +45,8 @@
 # {0} stays for encoding
 MSG_unsupported_encoding=Document cannot be written because encoding \"{0}\" is not supported.
 # {0} stays for encoding
-TEXT_SAVE_AS_UTF=Selected encoding {0} is not supported. Save it as UTF-8?
+TEXT_SAVE_AS_UTF=Selected encoding {0} is not supported or cannot encode file contents. Save the file as UTF-8?
+TEXT_SAVE_AS_UTF_DEFAULT=The default encoding is not supported or cannot encode file contents. Save the file as UTF-8?
 TEXT_WRONG_ENCODING=File {0} has wrong encoding.
 # {0} stays for filename
 TEXT_LOADING_ERROR=Cannot load {0}.
