Issue #211649: Issues with the shortcut that shows subclasses - Adding shortcuts to tooltips.

--- a/java.editor/src/org/netbeans/modules/java/editor/overridden/Bundle.properties
+++ b/java.editor/src/org/netbeans/modules/java/editor/overridden/Bundle.properties
@@ -48,6 +48,7 @@ TP_Overrides=Overrides method from: {0}
 TP_HasImplementations=Has Implementations
 TP_IsOverridden=Is Overridden
 TP_HasSubclasses=Has Subclasses
+LBL_shortcut_promotion=\n----\n({0} goes to {1,choice,0#Implementations|1#Subclasses|2#Overriding Methods|3#Ancestor Method})
 
 CAP_HasImplementations=Has Implementations
 CAP_IsOverridden=Is Overridden
