#207472 IllegalStateException: getInputStream invoked in AWT

--- a/web.refactoring/src/org/netbeans/modules/web/refactoring/Bundle.properties
+++ b/web.refactoring/src/org/netbeans/modules/web/refactoring/Bundle.properties
@@ -1,3 +1,4 @@
 OpenIDE-Module-Name=Web Refactoring
+TXT_WebXmlNotReadable=Potential changes cannot be propagated to web.xml because there has been problem acessing web.xml.
 TXT_WebXmlInvalidProblem=Potential changes cannot be propagated to web.xml because web.xml is invalid.
 TXT_WebXmlOldVersion=Potential changes cannot be propagated to web.xml because web application version is unsupported. Upgrade web.xml to version 2.4 or newer or use a previous version of NetBeans IDE.
