#212032 - No clear way to disable warning: Required children missing from element "head"

--- a/html.editor/src/org/netbeans/modules/html/editor/hints/Bundle.properties
+++ b/html.editor/src/org/netbeans/modules/html/editor/hints/Bundle.properties
@@ -79,6 +79,9 @@ ForeignContent_Desc=Checks of the embedded non-html content
 Form=Forms
 Form_Desc=Checks of forms
 
+HeadContent=Head Content
+HeadContent_Desc=Head Element Content Checks
+
 Ids=Element IDs
 Ids_Desc=Checks for elements IDs
 
