fixing Bug #212079 Code model ignore compiler flag "-fno-exceptions" - consolidate  undefined macros discovery

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
@@ -157,6 +157,9 @@ IncludeDirectoriesHint=Include directories
 PreprocessorDefinitionsTxt=Preprocessor Definitions
 PreprocessorDefinitionsHint=Preprocessor definitions
 PreprocessorDefinitionsLbl=Prepr&ocessor Definitions:
+PreprocessorUndefinedTxt=Preprocessor Undefined
+PreprocessorUndefinedHint=Preprocessor undefined macros. Macro names are prefixed with the compiler option (usually -U).
+PreprocessorUndefinedLbl=Preprocessor &Undefined:
 UseLinkerLibrariesTxt=Use Linker Libraries
 UseLinkerLibrariesHint=Use pkg-config libraries defined in the Linker configuration.\
  Checked property adds user include paths and user defined macros for each pkg-config library by invoking pkg-config by command:<br>\
