--- a/groovy.grails/src/org/netbeans/modules/groovy/grails/settings/Bundle.properties
+++ b/groovy.grails/src/org/netbeans/modules/groovy/grails/settings/Bundle.properties
@@ -43,7 +43,7 @@
 AdvancedOption_DisplayName_GrailsRuntime=Grails
 AdvancedOption_Tooltip_GrailsRuntime=Grails runtime settings
 # Followed by a URL where Grails can be downloaded
-SupportPanel.jLabel2.text=Get Grails at
+SupportPanel.jLabel2.text=Get Grails at: http://www.grails.org
 
 GrailsRuntimePanel.jLabel5.text=Grails &Home:
 
