Hopefully the last translatability issue

--- a/groovy.support/src/org/netbeans/modules/groovy/support/options/Bundle.properties
+++ b/groovy.support/src/org/netbeans/modules/groovy/support/options/Bundle.properties
@@ -41,7 +41,7 @@
 # made subject to such option by the copyright holder.
 
 # Followed by a URL where Groovy can be downloaded
-SupportPanel.jLabel2.text=Get Groovy at
+SupportPanel.jLabel2.text=Get Groovy at: http://groovy.codehaus.org
 
 OptionsCategory_Name_Groovy=Groovy
 OptionsCategory_Title_Groovy=Groovy
