Fixing annotation documentation so it can be translated

--- a/php.symfony2/src/org/netbeans/modules/php/symfony2/annotations/extra/Bundle.properties
+++ b/php.symfony2/src/org/netbeans/modules/php/symfony2/annotations/extra/Bundle.properties
@@ -156,7 +156,7 @@ class PostController extends Controller {\n\
     }\n\
 }\n\
 </code></pre>\n\
-<p>The <code>edit</code> action is now mapped to the <code>/blog/edit/{id}</code> pattern if the HTTP method used is either GET or POST.</p>\
+<p>The <code>edit</code> action is now mapped to the <code>/blog/edit/{id}</code> pattern if the HTTP method used is either <code>GET</code> or <code>POST</code>.</p>\
 <p>The <code>@Method</code> annotation is only considered when an action is annotated with <code>@Route</code>.</p>
 ParamConverterTag.documentation=<p style="font-weight: bold; font-size: 1.2em">@ParamConverter</p>\
 <p style="font-weight: bold; font-size: 1.1em">Description</p>\
@@ -177,7 +177,7 @@ public function showAction(Post $post) {\n\
 <p>Several things happens under the hood:</p>\
 <ul>\
   <li>The converter tries to get a <code>SensioBlogBundle:Post</code> object from the request attributes (request attributes comes from route placeholders -- here <code>id</code>);</li>\
-  <li>If no <code>Post</code> object is found, a <code>404</code> Response is generated;</li>\
+  <li>If no <code>Post</code> object is found, a <code>404</code> <code>Response</code> is generated;</li>\
   <li>If a <code>Post</code> object is found, a new <code>post</code> request attribute is defined (accessible via <code>$request->attributes->get('post')</code>);</li>\
   <li>As for any other request attribute, it is automatically injected in the controller when present in the method signature.</li>\
 </ul>\
@@ -189,9 +189,9 @@ public function showAction(Post $post) {\n\
 }\n\
 </code></pre>\n\
 <p style="font-weight: bold; font-size: 1.1em">Built-in Converters</p>\
-<p>The bundle has only one built-in converter, the Doctrine one.</p>\
-<p><b>Doctrine Converter</b></p>\
-<p>By default, the Doctrine converter uses the default entity manager. This can be configured with the <code>entity_manager</code> option.</p>\
+<p>The bundle has only one built-in converter, the <code>Doctrine</code> one.</p>\
+<p><b><code>Doctrine</code> Converter</b></p>\
+<p>By default, the <code>Doctrine</code> converter uses the default entity manager. This can be configured with the <code>entity_manager</code> option.</p>\
 <p style="font-weight: bold; font-size: 1.1em">Example</p>\
 <pre><code>\n\
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Route;\n\
@@ -223,15 +223,15 @@ interface ParamConverterInterface {\n\
 <p>The <code>ParamConverter</code> instance has three information about the annotation:</p>\
 <table border="0">\
 <tr>\
-    <td valign="top"><b>name</b></td>\
+    <td valign="top"><b><code>name</code></b></td>\
     <td>The attribute name.</td>\
 </tr>\
 <tr>\
-    <td valign="top"><b>class</b></td>\
+    <td valign="top"><b><code>class</code></b></td>\
     <td>The attribute class name (can be any string representing a class name).</td>\
 </tr>\
 <tr>\
-    <td valign="top"><b>options</b></td>\
+    <td valign="top"><b><code>options</code></b></td>\
     <td>An array of options.</td>\
 </tr>\
 </table>\n\
