--- a/api.search/src/org/netbeans/modules/search/Bundle.properties
+++ b/api.search/src/org/netbeans/modules/search/Bundle.properties
@@ -106,7 +106,7 @@ TEXT_MSG_NO_NODE_FOUND=No matching files were found.
 # {0} number of files
 TEXT_MSG_FOUND_X_NODES=Found {0} matching file(s).
 # {0} number of files, {1} total number of matches (matching strings)
-TEXT_MSG_FOUND_X_NODES_FULLTEXT=Found {1} match(es) in {0} file(s).
+TEXT_MSG_FOUND_X_NODES_FULLTEXT=Found {1} {1,choice,1#match|1<matches} of <b>{2}</b> in {0} {0,choice,1#file|1<files}.
 # {0} number of files, {1} total number of matches (matching strings), {2} pattern being found, {3} replace string
 TEXT_MSG_FOUND_X_NODES_REPLACE=Found {1} match(es) of \"{2}\" in {0} file(s). To be replaced with \"{3}\".
 # {0} number of files
