Opened Filter text changed

--- a/tasks.ui/src/org/netbeans/modules/tasks/ui/Bundle.properties
+++ b/tasks.ui/src/org/netbeans/modules/tasks/ui/Bundle.properties
@@ -12,8 +12,8 @@ LBL_ActiveTask=Active Task:
 LBL_RecentlyTooltip=Switch active task
 LBL_Matches=matches
 LBL_FilterTooltip=Set dashboard filter
-LBL_ShowAll=Show all entries
-LBL_ShowOpened=Show opened entries only
+LBL_ShowAll=Show all items
+LBL_ShowOpened=Show opened items only
 LBL_DeleteCatQuestion=Are you sure you want to delete {0} category?
 LBL_DeleteCatTitle=Delete Category
 LBL_CreateCatTitle=New Category
