#211890 - Bookmark Button Does Not Work in SQL Editor.

--- a/editor.bookmarks/src/org/netbeans/modules/editor/bookmarks/ui/Bundle.properties
+++ b/editor.bookmarks/src/org/netbeans/modules/editor/bookmarks/ui/Bundle.properties
@@ -43,6 +43,7 @@
 LBL_BookmarksView=Bookmarks
 LBL_BookmarksViewToolTip=Editor Bookmarks in Opened Projects
 LBL_BookmarksAction=&Bookmarks
+LBL_NullProjectDisplayName=<No Project>
 LBL_toolBarRefreshButtonToolTip=Refresh Bookmarks View
 LBL_toolBarTreeViewButtonToolTip=Tree View of Bookmarks (Ctrl+T to Toggle View)
 LBL_toolBarTableViewButtonToolTip=Table View of Bookmarks (Ctrl+T to Toggle View)
