#211554 - Catch exceptions when reading or saving blob/clob fields

--- a/db.dataview/src/org/netbeans/modules/db/dataview/table/celleditor/Bundle.properties
+++ b/db.dataview/src/org/netbeans/modules/db/dataview/table/celleditor/Bundle.properties
@@ -47,3 +47,13 @@ saveLob.unknownFormat=Unknown Format for Lob-Handling
 saveLob.targetNotWriteable=Target file can't be written.\nCheck file/directory permissions.
 saveLob.failure=Failure while saving file: {0}
 saveLob.dbError=DB-Failure: {0}
+lobErrorObject.database=Database error
+lobErrorObject.file=File error
+blobSaveToFileError.title=Error while saving BLOB to file
+blobReadFromFileError.title=Error while loading BLOB from file
+blobSaveToFileError.message={0} while saving BLOB\n\nFile: {1}\n\nMessage:\n{2}
+blobReadFromFileError.message={0} while loading BLOB\n\nFile: {1}\n\nMessage:\n{2}
+clobSaveToFileError.title=Error while saving CLOB to file
+clobReadFromFileError.title=Error while loading CLOB from file
+clobSaveToFileError.message={0} while saving CLOB\n\nFile: {1}\n\nMessage:\n{2}
+clobReadFromFileError.message={0} while loading CLOB\n\nFile: {1}\n\nMessage:\n{2}
