Displaying a message, when the doc is not found.

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/Bundle.properties
@@ -128,3 +128,5 @@ REGEXP_INVALID=Invalid Regular Expression
 #ct_switch=switch (v) { case c : }
 
 LBL_JSEditorTab=&Source
+
+MSG_DocNotAvailable=Documentation not found.
